--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -12,7 +12,7 @@ permissions:
   security-events: write
 
 env:
-  TF_WORKING_DIR: todoapp-tf
+  TF_WORKING_DIR: Environment/Dev-Private-AKS
 
 # -------------------------------
 # TFLINT JOB
